# SmartMeterChain

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  PROGRESS.md  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
backend/: Dockerfile  go.mod  go.sum  main.go
backend/config/: config.go  fabric.go
backend/database/: db.go
backend/handlers/: billing.go  consumer.go  dashboard.go  dispute.go  meter.go  tariff.go
backend/middleware/: auth.go
backend/models/: models.go
backend/services/: alert.go  billing.go  fabric.go  meter.go
backend/utils/: hash.go  response.go
blockchain/chaincode/smartmeter/: billing.go  dispute.go  go.mod  main.go  models.go  smartmeter.go  tariff.go
blockchain/network/: configtx.yaml  crypto-config.yaml  docker-compose-fabric.yaml
blockchain/network/scripts/: deploy-chaincode.sh  setup-network.sh
deploy/: setup-github-codespaces.sh  setup-gitpod.sh  setup-google-cloud.sh  setup-oracle-cloud.sh  start-all.sh
docs/: COMPETITION_SETUP.md  DEMO_SCRIPT.md  PROJECT_PLAN.md  architecture.md  business-model.md  compliance.md
frontend/: Dockerfile  app.config.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: client.tsx  main.tsx  router.tsx  ssr.tsx  styles.css
frontend/app/lib/: api.ts
frontend/app/routes/: __root.tsx  alerts.tsx  billing.tsx  consumers.tsx  disputes.tsx  explorer.tsx  index.tsx  login.tsx  meters.tsx  (+1 more)
mobile/: pubspec.yaml
mobile/lib/: main.dart
simulator/: Cargo.toml  config.yaml
simulator/src/: client.rs  config.rs  generator.rs  main.rs
(+8 files in other folders)
